# testing_wrapper

./: .env.example  .flake8  .gitignore  DOCUMENTATION.md  Makefile  README.md  deploy.sh  pyproject.toml  requirements.txt  run_daily.sh  setup.py  testing.py  usage_examples.py
config/: parts_config.yaml  suppliers_config.yaml
data/nominalheatmapsthickness/: heatmapNominalOP180ThicknessExtrados1B.csv  heatmapNominalOP180ThicknessIntrados1B.csv  heatmapNominalOP210ThicknessExtrados1B.csv  heatmapNominalOP230ThicknessIntrados1B.csv  heatmapNominalOP340ThicknessExtrados1B.csv  heatmapNominalOP340ThicknessIntrados1B.csv  heatmapNominalOP360ThicknessExtrados1B.csv  heatmapNominalOP360ThicknessIntrados1B.csv  heatmapNominalThicknessExtrados1A.csv  heatmapNominalThicknessIntrados1A.csv
data/nominalheatmapswidthness/: heatmapNominalOP250Widthness1A_MLX.csv  heatmapNominalWidthness1A.csv  heatmapNominalWidthness1A_PA.csv  heatmapNominalWidthness1B.csv
data/nominalsections/: nominalSections1A.xlsx  nominalSections1APA.xlsx  nominalSections1APAV0.xlsx  nominalSections1B.xlsx  nominalSections1B_OP340.xlsx  nominalSectionsOP180Ext1B.xlsx  nominalSectionsOP180Int1B.xlsx  nominalSectionsOP210Ext1B.xlsx  nominalSectionsOP210Int1B.xlsx  nominalSections_1A_MLX_OP250_Int.xlsx
data/nominalskeletons/: nominalSkeleton1A.xlsx  nominalSkeleton1APA.xlsx  nominalSkeleton1APAV0.xlsx  nominalSkeleton1BOP340.xlsx  nominalSkeleton1BOP420.xlsx  nominalSkeleton_1A_MLX_OP250.xlsx
src/mle_heatmap_wrapper/: __init__.py
tests/: analysis_validation.py  conftest.py
tests/unit/: test_parsers.py  (+3 more)
(+208 files in other folders)
