[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mle-heatmap-wrapper"
version = "1.1.0"
description = "Wrapper for MLE heatmap geometric calculations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
  "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
  "mypy>=1.5.0",
]

[project.scripts]
mle-heatmap = "mle_heatmap_wrapper.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
